# ubiquity_motor

./: CMakeLists.txt  package.xml  ubiquity_motor.xml  ubiquity_motor_diagnostics_broadcaster.xml
include/ubiquity_motor/: motor_diagnostics_broadcaster.hpp  motor_interface.hpp  motor_message.hpp  motor_parameters.hpp  motor_serial.hpp  motor_system.hpp  shared_queue.hpp
scripts/: test_motor_board.py
src/: motor_diagnostics_broadcaster.cpp  motor_interface.cpp  motor_message.cpp  motor_serial.cpp  motor_system.cpp  probe_robot.cpp
test/: motor_interface_test.cpp  motor_message_test.cpp  motor_parameter_test.cpp  motor_serial_test.cpp  shared_queue_test.cpp
