<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ubiquity_motor</name>
  <version>0.12.0</version>
  <description>Provides a ROS interface to Ubiquity Robotics Magni motor controllers</description>
  <maintainer email="rohan@aleopile.com">dyno</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>boost</depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>

  <depend>serial</depend>
  <depend>hardware_interface</depend>

  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>diagnostic_updater</depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
